# epp-swarm

./: .gitignore  .taxonomy.h.swp  CMakeLists.txt  FileLoader.cpp  LICENSE  MATLAB.cxx  MATLAB.h  README.md  boundary.h  cholesky.cxx  cli.cxx  client.cxx  client.h  constants.h  dummy.cxx  json.cxx  json.h  metadata.h  modal.cxx  modal.h  nojson.cxx  nono  old_client.cxx  parameters.json  phenogram.html  phenogram.js  phenogram.json  polygon.cxx  polygon.h  pursuer.h  pursuit.cxx  pursuit.h  sample.cxx  sample.h  stream.cxx  stream.h  subset.cxx  taxonomy.h  taxonomy.json  template.html  (+6 more)
dispatcher/: index.js  package.json
include/: FileLoader.h  boundary.h  client.h  credentials.h  dualgraph.h  modal.h  work.h
